test/fixtures/configs/pages/patch/fail/error.js
module.exports = {
  url: '/users/1/projects/1/pages/1',
  method: 'patch',
  headers: {
    authorization: 'token userToken'
  },
  payload: {
    x: 25
  }
};
